--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Backend for my Diploma",
   "main": "index.js",
   "scripts": {
+    "lint": "npx eslint .",
     "start": "node app.js",
     "dev": "nodemon app.js"
   },
@@ -22,6 +23,9 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "eslint": "^7.27.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.23.4",
     "nodemon": "^2.0.7"
   }
 }
