--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   },
   "homepage": "https://github.com/NikolosHGW/movies-explorer-api#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^14.0.0",
+    "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.12",
     "validator": "^13.6.0"
   },
